# mcp-vision

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  server.json
.github/workflows/: publish-mcp.yml
src/mcp_vision/: __init__.py  server.py
